DFR-3526: Draft orders - handle interveners and barrister uploads (#2078)
* checkstyle

* Change approvalDate type to LocalDateTime

* add refusedDate

* Change approvalDate to LocalDateTime

* (WIP) Remove refused order from DraftOrderReview

* Clear showWarningMessageToJudge

* Bug fix

* Change "Is Final?" field to checkbox

* fix tests in DraftOrderServiceTest

* checkstyle

* Add @RequiredArgsConstructor

* Tests for ApproveOrderService

* Move methods into HearingProcessor

* refused order population

* remove extra blank line

* Remove blank lines.

* tidy up

* bug fix

* checkstyle fix

* Missing refusal date in the report parameter

* add tobuilder

* Add tests to JudgeApprovalResolverTest

* Making use of ContestedDraftOrderNotApprovedDetailsMapper and refactor the unit tests.

* Remove extra blank line

* add private a constructor

* Fix a bug that not showing judge name

* update judge details logic

* Remove extra blank line.

* Generate Refusal order for PSA.

* rename titleInJudgeDecisionMessage to inlineDocType

* Add tests to JudgeApprovalResolverTest

* Add tests to HearingProcessorTest

* Remove commented tests.

* wrong property

* Improve coverage and improve tests

* FileUtils method for inserting timestamp to a filename.

* insert timestamp to the refusal order filename.

* Add getter for order status

* refactor mock for approvables and verify order status

* Improve coverage

* fix import

* Remove refused order from AgreedDraftOrderCollection

* Java Docs added

* Remove @spy in ApproveOrderServiceTest

* remove @spy and improve test setup

* Add email template id

* remove an extra blank line.

* typo

* add judgeFeedback and documentName

* capture submitted by email address and populate them to AgreedDraftOrder and SuggestedDraftOrder.

* Add hearingDate to JudgeApproval

* add test case for the submitted handler.

* apply submitted e